[project]
name = "aspy-dependency-injection"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli]>=0.118.0",
    "pydantic>=2.12.0",
]

[dependency-groups]
dev = [
    "jupyter==1.1.1",
    "poethepoet==0.37.0",
    "pyright[nodejs]==1.1.406",
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "pytest-cov==7.0.0",
    "pytest-mock==3.15.1",
    "ruff==0.14.0",
]

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.pyright]
typeCheckingMode = "strict"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812", # missing-trailing-comma
    "D100",   # undocumented-public-module
    "D101",   # undocumented-public-class
    "D102",   # undocumented-public-method
    "D103",   # undocumented-public-function
    "D104",   # undocumented-public-package
    "D105",   # undocumented-magic-method
    "D106",   # undocumented-public-nested-class
    "D107",   # undocumented-public-init
    "E501",   # line-too-long
    "ICN",    # flake8-import-conventions
    "S101",   # assert
    "TRY003", # raise-vanilla-args
]


[tool.pytest.ini_options]
pythonpath = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.poe.tasks]
check-code.shell = "ruff check && ruff format --diff && pyright"
